--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 FATSECRET_CLIENT_ID=
 FATSECRET_CLIENT_SECRET=
+# OAuth 1.0 Consumer Secret (different from Client Secret, see API Keys page)
+FATSECRET_CONSUMER_SECRET=
