--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fatsecret-mcp",
   "version": "0.0.1",
-  "description": "MCP server for FatSecret Platform API - food search, nutrition data, food diary, recipes, and weight tracking",
+  "description": "MCP server for FatSecret Platform API - food search, nutrition data, food diary, recipes, and weight tracking (unofficial)",
   "author": "fliptheweb",
   "mcpName": "io.github.fliptheweb/fatsecret-mcp",
   "license": "MIT",
